src/test/deca/syntax/invalid/if_method.deca
//Description
//    Vérifier la géné de méthode dans un if
//
//Résultats :
//    Erreur Lexicale:
//    Ligne 11

class A{

if(true){
void getX(){;}
}
}
